PyMaker/datas/object2/RawHTML/i16901/Python_DOC_referPages.error-installing-python-3-4-packages-with-pip3.txt
<div class="post-text" itemprop="text">
<p>I've banged my head many hours trying to solve this, any help would be much appreciated.</p>
<p>I had Python 2.7.3 installed, and I never had any problems using pip.
I installed Python 3.4 following the README with no errors, and now there are several packages that return errors when trying to install through pip3. For some packages it works fine though.</p>
<p>Here's the error I get when, for example, I try <code>sudo pip3 install pysqlite</code>
<a href="http://pastebin.com/xTTK3zep" rel="nofollow">http://pastebin.com/xTTK3zep</a>
and the log file:
<a href="http://pastebin.com/23X8cmjU" rel="nofollow">http://pastebin.com/23X8cmjU</a></p>
<p>Also happened when trying to install matplotlib, for example, with the same error:</p>
<p><code>Command python setup.py egg_info failed with error code 1 in /tmp/pip_build_root/pysqlite
</code></p>
<p>If there's anything else I could provide to help answer the question, just let me know.
Is this a bug, or am I doing something stupid?
Thanks!</p>
</div>
<div class="post-text" itemprop="text">
<p>pip doesn't check that the package has been updated for your Python version. It seems that pysqlite <em>hasn't</em> - from the log file:</p>
<pre><code>  File "/tmp/pip_build_root/pysqlite/setup.py", line 85

    print "Is sphinx installed? If not, try 'sudo easy_install sphinx'."

                                                                       ^

SyntaxError: invalid syntax
</code></pre>
<p>This is a SyntaxError because <a href="https://docs.python.org/3/whatsnew/3.0.html#print-is-a-function" rel="nofollow">print is a function</a> in Python 3, not a statement. The only solution to this is to use a package that has been updated, or to update this one yourself. You might consider whether the <a href="https://docs.python.org/3.4/library/sqlite3.html" rel="nofollow">builtin sqlite3 module</a> meets your needs. As far as I can tell, it seems to be the same module; it is certainly, according to the docs, originally written by the same person.</p>
</div>
<span class="comment-copy">Is sphinx installed?</span>
<span class="comment-copy">@Shahinism Note that there is a <code>SyntaxError</code> in the <code>setup.py</code> which only happens to be on that <code>print</code> statement, but it doesn't have anything to do with sphinx. It simply looks like the <code>setup.py</code> isn't python3 ready.</span>
<span class="comment-copy">@Bakuriu Oh, you are right! That kind of <code>print</code> statement will produce <code>SyntaxError</code> in python 3.</span>
<span class="comment-copy">@Shahinism Yes, it's installed.</span>
<span class="comment-copy">It <b>is</b> the same module. Check the <i>see also</i> section: "<a href="https://github.com/ghaering/pysqlite" rel="nofollow noreferrer">github.com/ghaering/pysqlite</a>     The pysqlite web page – <b><code>sqlite3</code> is developed externally under the name “pysqlite”</b>."</span>
<span class="comment-copy">Thanks for the answer! So you think this is a problem of the packages themselves and not something messed up in my system between python2/3 and pip2/3? I'm confused with this 'dual' python thing, I must say.</span>
<span class="comment-copy">This all started because I was trying to use Django with Python3. Everything was going smoothly, until I ran <code>python3 manage.py runserver</code>. Then this error appeared.. <a href="http://pastebin.com/E0twvX7g" rel="nofollow noreferrer">pastebin.com/E0twvX7g</a> .. and I lost hours and hairs, and I still haven't fixed it. Not that I want to use sqlite3 with Django, I want postgres, but I was afraid it was something due to the 'dual' python/pip 2 and 3.</span>
